// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete render options dropdown on focus 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-7-label"
      aria-owns="downshift-7-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-7-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-7-menu"
          aria-labelledby="downshift-7-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-7-input"
          placeholder="Start typing here..."
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-7-label"
        id="downshift-7-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-7-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-7-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-7-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-7-item-3"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-7-item-4"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Ukraine
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-0-input"
          placeholder="Start typing here..."
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-0-label"
        id="downshift-0-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior render option text when passed \`defaultValue\` prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-5-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-5-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-5-input"
          placeholder="Lithuania"
          type="text"
          value="Lithuania"
        />
      </div>
      <div
        aria-labelledby="downshift-5-label"
        id="downshift-5-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior render option text when passed \`value\` prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-3-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-3-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-3-input"
          placeholder="Ukraine"
          type="text"
          value="Ukraine"
        />
      </div>
      <div
        aria-labelledby="downshift-3-label"
        id="downshift-3-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior render options when start typing 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      aria-owns="downshift-1-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-1-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-1-menu"
          aria-labelledby="downshift-1-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-1-input"
          placeholder="Start typing here..."
          type="text"
          value="t"
        />
      </div>
      <div
        aria-labelledby="downshift-1-label"
        id="downshift-1-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-1-item-0"
              role="option"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Croatia
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-1-item-1"
              role="option"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Lithuania
              </span>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
